# relationship-control-theory

./: love_control_gui.py  love_control_system_notebook.ipynb  love_model.py  pyproject.toml  requirements.txt  streamlit_app.py
